modules/gdscript/tests/scripts/analyzer/errors/trait_not_implemented.gd
class Something extends RefCounted implements SimSystem:
	pass

trait SimSystem:
	func declared_func() -> bool

func test():
	pass
